--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Iceland Earthquake Monitor</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/application.css">
+    <script src="http://js.pusher.com/2.2/pusher.min.js"></script>
     <script type="text/javascript" src="./d3/d3.v3.js" charset="utf-8"></script>
     <script type="text/javascript" src="./javascripts/application.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABNcorF3XQhuOw1d4-CujSWGBRT0_D-hU"></script>
