--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <title>Iceland Earthquake Monitor</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/application.css">
-    <script src="http://js.pusher.com/2.2/pusher.min.js"></script>
+    <!-- // <script src="http://js.pusher.com/2.2/pusher.min.js"></script> -->
     <script type="text/javascript" src="./d3/d3.v3.js" charset="utf-8"></script>
     <script type="text/javascript" src="./javascripts/application.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABNcorF3XQhuOw1d4-CujSWGBRT0_D-hU"></script>
   </head>
   <body>
-    <h1>Welcome to Iceland Earthquake Monitor</h1>
-    <h3>A collection of all earthquakes from the last 48 hours</h3>
-
-    <div id="map-canvas"></div>
     <div class="container">
+      <h1>Welcome to Iceland Earthquake Monitor</h1>
+      <h2>A collection of all earthquakes from the last 48 hours</h2>
+      <button type="submit" class="update-quakes btn">Get Latest Quakes</button>
+      <!-- <div id="map-canvas"></div> -->
       <div class="quake-events">
-        <h3>Quake stats</h3>
+        <h3>D3 Quake Plotting</h3>
+      </div>
+      <div class="container-quakes">
       </div>
     </div>
+    <script type="text/javascript" charset="utf-8" async defer>
+      IcelandQuakes.bindEventListeners()
+    </script>
   </body>
 </html>
