--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/application.css">
     <script src="http://js.pusher.com/2.2/pusher.min.js"></script>
     <script type="text/javascript" src="./d3/d3.v3.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./javascripts/application.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABNcorF3XQhuOw1d4-CujSWGBRT0_D-hU"></script>
   </head>
   <body>
@@ -19,5 +19,8 @@
         <h3>Quake stats</h3>
       </div>
     </div>
+
+    <script type="text/javascript" src="./javascripts/application.js"></script>
+
   </body>
 </html>
