--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
     <title>Iceland Earthquake Monitor</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/application.css">
-    <script type="text/javascript" src="./d3/d3.v3.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./javascripts/application.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABNcorF3XQhuOw1d4-CujSWGBRT0_D-hU"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   </head>
   <body>
-    <div class="container">
-      <h1>Welcome to Iceland Earthquake Monitor</h1>
-      <h2>A collection of all earthquakes from the last 48 hours</h2>
+    <div class="container fl w-100 bg-light-purple">
+      <h1 class="f1">Welcome to Iceland Earthquake Monitor</h1>
+      <h2 class="f2">A collection of all earthquakes from the last 48 hours</h2>
       <div class="quake-events">
-        <h3>D3 Quake Plotting</h3>
+        <h3 class="f3">D3 Quake Plotting</h3>
       </div>
-      <div class="container-quakes">
+      <div class="container-quakes fl w-100 b--solid b--green bw1">
       </div>
     </div>
-    <script type="text/javascript" charset="utf-8" async defer>
-      IcelandQuakes.bindEventListeners()
-    </script>
+    <script type="text/javascript" src="./dist/bundle.js"></script>
   </body>
 </html>
