start adding map data, extract from json into js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
       <div class="container-quakes fl w-100 b--solid b--green bw1">
       </div>
+      <div class="map-container"></div>
     </div>
     <script type="text/javascript" src="./dist/bundle.js"></script>
   </body>
