--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   </head>
   <body>
-    <div class="container fl w-100 bg-light-purple">
+    <!-- <div class="container fl w-100">
       <h1 class="f1">Welcome to Iceland Earthquake Monitor</h1>
       <h2 class="f2">A collection of all earthquakes from the last 48 hours</h2>
       <div class="quake-events">
@@ -15,8 +15,11 @@
       </div>
       <div class="container-quakes fl w-100 b--solid b--green bw1">
       </div>
-      <div class="map-container"></div>
-    </div>
-    <script type="text/javascript" src="./dist/bundle.js"></script>
+    </div> -->
+    <div class="map-container"></div>
+    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
+    <script type="text/javascript" src="./map.js"></script>
+    <!-- <script type="text/javascript" src="./dist/bundle.js"></script> -->
   </body>
 </html>
