--- a/index.html
+++ b/index.html
@@ -4,22 +4,16 @@
     <title>Iceland Earthquake Monitor</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/application.css">
-    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   </head>
   <body>
-    <!-- <div class="container fl w-100">
-      <h1 class="f1">Welcome to Iceland Earthquake Monitor</h1>
-      <h2 class="f2">A collection of all earthquakes from the last 48 hours</h2>
-      <div class="quake-events">
-        <h3 class="f3">D3 Quake Plotting</h3>
-      </div>
-      <div class="container-quakes fl w-100 b--solid b--green bw1">
-      </div>
-    </div> -->
+    <header class="header">
+      <h1 class="title">Iceland Quakes</h1>
+      <h2 class="sub-title">Earthquakes from the past 48 hours</h2>
+    </header>
     <div class="map-container"></div>
-    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="//d3js.org/topojson.v1.min.js"></script>
+
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <script type="text/javascript" src="./map.js"></script>
-    <!-- <script type="text/javascript" src="./dist/bundle.js"></script> -->
   </body>
 </html>
