--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Iceland Earthquake Monitor</title>
-    <link rel="stylesheet" href="./bundle.css">
-  </head>
-  <body>
-    <header class="header">
-      <h1 class="title">Iceland Quakes</h1>
-      <h2 class="sub-title">Earthquakes from the past 48 hours</h2>
-    </header>
-    <div class="map-container"></div>
-
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/topojson.v1.min.js"></script>
-    <script type="text/javascript" src="./bundle.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css"><link rel="manifest" href="/iceland-quakes/manifest.json"><link rel="shortcut icon" href="/iceland-quakes/favicon.ico"><title>Iceland Quakes</title><link href="/iceland-quakes/static/css/main.277cd896.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="https://d3js.org/d3.v4.min.js"></script><script src="https://d3js.org/topojson.v1.min.js"></script><script type="text/javascript" src="/iceland-quakes/static/js/main.2f5abf1f.js"></script></body></html>
